--- a/ricardo-graphics/ricardo-graphics/ricardo-graphics.vcxproj
+++ b/ricardo-graphics/ricardo-graphics/ricardo-graphics.vcxproj
@@ -118,9 +118,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="matrix_txt.cpp" />
     <ClCompile Include="vector_t.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="matrix_txt.h" />
     <ClInclude Include="vector_t.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
