--- a/ricardo-graphics/ricardo-graphics/ricardo-graphics.vcxproj.filters
+++ b/ricardo-graphics/ricardo-graphics/ricardo-graphics.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Loader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
