Lots of refactoring

--- a/project-files/ricardo-graphics.vcxproj
+++ b/project-files/ricardo-graphics.vcxproj
@@ -175,6 +175,8 @@
     <ClInclude Include="..\ricardo-graphics\include\Model.h" />
     <ClInclude Include="..\ricardo-graphics\include\Object.h" />
     <ClInclude Include="..\ricardo-graphics\include\Vertex.h" />
+    <ClInclude Include="..\ricardo-graphics\include\core.h" />
+    <ClInclude Include="..\ricardo-graphics\include\debug.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\ricardo-graphics\src\Batch.cpp" />
