--- a/project-files/ricardo-graphics.vcxproj.filters
+++ b/project-files/ricardo-graphics.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="..\ricardo-graphics\include\Vertex.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\ricardo-graphics\include\core.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ricardo-graphics\include\debug.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\ricardo-graphics\src\Batch.cpp">
