--- a/project-files/ricardo-graphics.vcxproj.filters
+++ b/project-files/ricardo-graphics.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\ricardo-graphics\include\Object.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\ricardo-graphics\include\Shader.h">
+      <Filter>include</Filter>
+    </ClInclude>
     <ClInclude Include="..\ricardo-graphics\include\Vertex.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -66,6 +69,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\ricardo-graphics\src\Object.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ricardo-graphics\src\Shader.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\ricardo-graphics\src\main.cpp">
